--- a/laba4/laba4.csproj
+++ b/laba4/laba4.csproj
@@ -203,9 +203,9 @@
     <Compile Include="Category.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="CF\Category1.cs" />
+    <Compile Include="CF\Categories.cs" />
     <Compile Include="CF\CodeFirstModel.cs" />
-    <Compile Include="CF\Good1.cs" />
+    <Compile Include="CF\Goods.cs" />
     <Compile Include="GetGoodsByCategory_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -251,11 +251,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Categories.cs" />
     <Compile Include="EditWindow.xaml.cs">
       <DependentUpon>EditWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Goods.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
